@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1791 2004/05/28 22:20:42 xtraeme Exp $
+$NetBSD: TODO,v 1.1792 2004/05/28 22:31:50 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -262,7 +262,6 @@ Suggested package updates
 	o ivtools-1.1.3
 	o jakarta-tomcat-3.3.1a
 	o jam-2.5
-	o jikes-1.21
 	o joe-2.9.8 [pkg/18022, incomplete]
 	o joe-3.0
 	o john-1.6.37
