@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6049 2004/05/28 22:20:42 xtraeme Exp $
+$NetBSD: CHANGES,v 1.6050 2004/05/28 22:31:50 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2672,3 +2672,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated docbook-simple to 1.1.b3 [minskim 2004-05-28]
 	Updated py-pyrex to 0.9.2.1 [recht 2004-05-28]
 	Updated dovecot to 0.99.10.5 [xtraeme 2004-05-28]
+	Updated jikes to 1.21 [xtraeme 2004-05-28]
